--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
+  "main": "dist/index.js",
+  "scripts": {
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn index.ts",
+    "clean": "rimraf dist",
+    "tsc": "tsc",
+    "build": "npm-run-all clean tsc"
+  },
   "dependencies": {
+    "@types/express": "^4.17.17",
     "child_process": "^1.0.2",
+    "express": "^4.18.2",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
